<resources>
    <!-- Global strings -->
    <string name="app_name">Sports Recorder</string>

    <!-- Main Menu -->
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>

    <!-- Load Game Menu -->
    <string name="title_activity_load_game">Load Game</string>

    <!-- Stat Input -->
    <string name="made_fg">Made\nFG</string>
    <string name="missed_fg">Missed\nFG</string>
    <string name="made_3pt">Made\n3pt</string>
    <string name="missed_3pt">Missed\n3pt</string>
    <string name="block">Block</string>
    <string name="assist">Assist</string>
    <string name="steal">Steal</string>
    <string name="made_ft">Made\nFT</string>
    <string name="missed_ft">Missed\nFT</string>
    <string name="rebound">Rebound</string>
    <string name="end_quarter">End quarter</string>
    <string name="undo">Undo</string>
    <string name="score1">Team 1</string>
    <string name="score2">Team 2</string>

    <!-- Summary -->
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
