<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cs498.sportsrecorder.StatInput">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@android:color/white"
            android:onClick="endQuarter"
            android:text="@string/end_quarter" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@android:color/white"
            android:onClick="undo"
            android:text="@string/undo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/red"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addMadeTwoPoint"
            android:text="@string/made_fg" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/darkred"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addMissedTwoPoint"
            android:text="@string/missed_fg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/orange"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addMadeThreePoint"
            android:text="@string/made_3pt" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/darkorange"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addMissedThreePoint"
            android:text="@string/missed_3pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/green"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addMadeFreeThrow"
            android:text="@string/made_ft" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/darkgreen"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addMissedFreeThrow"
            android:text="@string/missed_ft" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/blue"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addAssist"
            android:text="@string/assist" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/darkblue"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addSteal"
            android:text="@string/steal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/purple"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addBlock"
            android:text="@string/block" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/darkpurple"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addRebound"
            android:text="@string/rebound" />

    </LinearLayout>

</LinearLayout>
